# mlops-zoomcamp

./: .gitignore  Makefile  pyproject.toml
02-experiment-tracking/: duration-prediction.ipynb  model-registry.ipynb
03-orchestration/: homework.py
04-deployment/homework/: Dockerfile  Pipfile  predict.py  starter.ipynb
04-deployment/web-service/: Dockerfile  test.py
mlops_zoomcamp/: settings.py
notebooks/: homework_1.ipynb  homeworks.ipynb
tests/: test_mlops_zoomcamp.py
