[tool.poetry]
name = "mlops-zoomcamp"
version = "0.1.0"
description = ""
authors = ["Diego <diegofg293@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.4"
pandas = "^1.4.2"
scikit-learn = "^1.1.1"
seaborn = "^0.11.2"
xgboost = "^1.6.1"
rich = "^12.4.4"
pyarrow = "^8.0.0"
prefect = "2.0b5"
Flask = "^2.1.2"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipykernel = "^6.13.0"
localstack = "^0.14.3"
jupyter = "^1.0.0"
hyperopt = "^0.2.7"
mlflow = "^1.26.1"
black = {version = "^22.3.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
